tools/cclass_stubs.h

void exit(int status);
/* Minimal charmap — cclass_remap only reads type + calls from_uni */
struct charmap {
	struct charmap *next;
	const char *name;
	int type;
};
void *joe_malloc(ptrdiff_t size);
void *joe_realloc(void *ptr, ptrdiff_t size);
void joe_free(void *ptr);
void *mcpy(void *a, const void *b, ptrdiff_t len);
void *mmove(void *d, const void *s, ptrdiff_t sz);
void ttsig(int sig);