tools/syntax_stubs.h

int strcmp(const char *a, const char *b);
typedef int64_t off_t;
#define NO_MORE_DATA (-256)
typedef struct Hash HASH;
typedef struct point P;
typedef struct buffer B;
typedef struct options OPTIONS;
typedef struct entry HENTRY;
struct Hash {
	ptrdiff_t len;
	HENTRY **tab;
	ptrdiff_t nentries;
};
struct high_syntax {
	struct high_syntax *next;
	char *name;
	char *subr;
	struct high_param *params;
	struct high_state **states;
	HASH *ht_states;
	ptrdiff_t nstates;
	ptrdiff_t szstates;
	struct color_def *color;
	struct high_cmd default_cmd;
	struct high_frame *stack_base;
	struct high_delim_frame *delim_stack_base;
};
struct options_match { char _pad[32]; };
struct macro { char _pad[48]; };
typedef struct macro MACRO;
struct options {
	OPTIONS *next;
	const char *ftype;
	struct options_match *match;
	int overtype;
	off_t lmargin;
	off_t rmargin;
	int autoindent;
	int wordwrap;
	int nobackup;
	off_t tab;
	int indentc;
	off_t istep;
	const char *context;
	const char *lmsg;
	const char *rmsg;
	const char *smsg;
	const char *zmsg;
	int linums;
	int hiline;
	int readonly;
	int french;
	int flowed;
	int spaces;
	int crlf;
	int highlight;
	int visiblews;
	int syntax_debug;
	const char *syntax_name;
	struct high_syntax *syntax;
	const char *map_name;
	struct charmap *charmap;
	const char *language;
	int smarthome;
	int indentfirst;
	int smartbacks;
	int purify;
	int picture;
	int highlighter_context;
	int single_quoted;
	int no_double_quoted;
	int c_comment;
	int cpp_comment;
	int hash_comment;
	int vhdl_comment;
	int semi_comment;
	int tex_comment;
	int hex;
	int viewmode;
	int ansi;
	int title;
	const char *text_delimiters;
	const char *cpara;
	const char *cnotpara;
	MACRO *mnew;
	MACRO *mold;
	MACRO *msnew;
	MACRO *msold;
	MACRO *mfirst;
};
struct point {
	void *link_next;
	void *link_prev;
	B *b;
	char _pad[112 - 24];
};
struct buffer {
	char _pad0[192];
	OPTIONS o;
	char _pad1[632 - 192 - 344];
};
HASH *htmk(ptrdiff_t len);
void *htadd(HASH *ht, const char *name, void *val);
void *htfind(HASH *ht, const char *name);