tools/main_stubs.h

typedef int64_t time_t;
int atexit(void (*func)(void));
time_t time(time_t *t);
#define sz(a) (a), slen(a)
#define LINK(type) struct { type *next; type *prev; }
struct b;
 typedef struct b B;
struct p;
 typedef struct p P;
struct screen;
 typedef struct screen Screen;
 typedef struct cap CAP;
 typedef struct vt_context VT;
struct vfile;
 typedef struct vfile VFILE;
struct screen {
	SCRN *t;
	ptrdiff_t wind;
	W *topwin;
	W *curwin;
	ptrdiff_t w, h;
};
typedef struct options OPTIONS;
struct p {
	LINK(P) link;
	B *b;
	char _pad0[24];
	off_t byte;
	off_t line;
	off_t col;
	off_t xcol;
	int valcol;
	int end;
	int attr;
	int valattr;
	P **owner;
	const char *tracker;
};
typedef int pid_t;
/* Layout mirrors gapbuffer/types.zig B (size 632) */
struct b {
	LINK(B) link;
	P *bof;
	P *eof;
	char *name;
	char _pad1[36];
	int orphan;
	int count;
	int changed;
	int backup;
	char _pad_backup[4];
	void *undo;
	char _pad_marks[88];
	OPTIONS o;
	P *oldcur;
	P *oldtop;
	P *err;
	char *current_dir;
	int shell_flag;
	int rdonly;
	int internal;
	int scratch;
	int er;
	pid_t pid;
	int out;
	VT *vt;
	int raw;
	char _pad_raw[4];
	void *db;
	void (*parseone)(struct charmap *map, const char *s, char **rtn_name, off_t *rtn_line);
};
CAP *my_getcap(char *name, long baud, void (*out)(void *outptr, char c), void *outptr);
VFILE *vtmp(void);
extern int orphan;